# lab1

./: CMakeLists.txt  Dockerfile  code1  falling_fact.cpp  falling_fact.h  main.cpp  poch.cpp
.github/workflows/: ci.yaml
tests/: falling_fact_tests.cpp
